# ChangeLog for net-print/gnome-cups-manager
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/gnome-cups-manager/ChangeLog,v 1.25 2004/08/24 15:16:46 gustavoz Exp $

  24 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org>
  gnome-cups-manager-0.18.ebuild:
  Stable on sparc

  24 Aug 2004; Heinrich Wendel <lanius@gentoo.org>
  gnome-cups-manager-0.18.ebuild:
  stable on x86

*gnome-cups-manager-0.23 (19 Aug 2004)

  19 Aug 2004; Heinrich Wendel <lanius@gentoo.org>
  gnome-cups-manager-0.23.ebuild:
  version bump

  09 Jun 2004; Dylan Carlson <absinthe@gentoo.org>
  -gnome-cups-manager-0.17-r03202004.ebuild:
  Removed hardmask and unnecessary ebuild.

*gnome-cups-manager-0.18 (09 Jun 2004)

  09 Jun 2004; Dylan Carlson <absinthe@gentoo.org>
  +files/gnome-cups-manager-0.18-paren.patch, +gnome-cups-manager-0.18.ebuild:
  Version bump.  Stable on amd64.  Fixes bug #49242 (cheers Robert Moss).

  14 May 2004; Stephen P. Becker <geoman@gentoo.org>
  gnome-cups-manager-0.17.ebuild:
  Stable on mips.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org>
  gnome-cups-manager-0.17.ebuild:
  Add inherit eutils

  21 Mar 2004; foser <foser@gentoo.org> gnome-cups-manager-0.17.ebuild :
  Add patch to fix issues with gtk+-2.4 deprecations (#45259)

  20 Mar 2004; foser <foser@gentoo.org> gnome-cups-manager-0.17-r03202004.ebuild :
  Add hicolor theme dep, to make sure the icons work

*gnome-cups-manager-0.17-r03202004 (20 Mar 2004)

  20 Mar 2004; foser <foser@gentoo.org> gnome-cups-manager-0.17-r03202004.ebuild :
  CVS snapshot of HEAD, needed to compile to nautilus view in gnome 2.6
  Updated deps

  15 Mar 2004; Stephen P. Becker <geoman@gentoo.org>
  gnome-cups-manager-0.17.ebuild:
  Added ~mips keyword.

  29 Nov 2003; Brad House <brad_mssw@gentoo.org>
  gnome-cups-manager-0.17.ebuild:
  mark stable on amd64

  14 Nov 2003; Aron Griffis <agriffis@gentoo.org>
  gnome-cups-manager-0.17.ebuild:
  Stable on ia64
