@@ -1,6 +1,14 @@
 # ChangeLog for net-print/gnome-cups-manager
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/gnome-cups-manager/ChangeLog,v 1.25 2004/08/24 15:16:46 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/gnome-cups-manager/ChangeLog,v 1.26 2004/09/22 12:00:19 lanius Exp $
+
+  22 Sep 2004; Heinrich Wendel <lanius@gentoo.org>
+  gnome-cups-manager-0.17.ebuild, gnome-cups-manager-0.23.ebuild:
+  apply gcc 3.4 patch to version 0.17
+
+  26 Aug 2004; Heinrich Wendel <lanius@gentoo.org>
+  gnome-cups-manager-0.23.ebuild:
+  add gnomesu to depend, bug #61747
 
   24 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org>
   gnome-cups-manager-0.18.ebuild:
